<resources>
    <string name="app_name">ML TF OCR</string>
    <string name="select_image_for_text_recognition">Select image for text recognition</string>
    <string name="find_text_button">Predict (MLK)</string>
    <string name="find_face_contour_button">Find face contour</string>
    <string name="find_text_cloud_button">Find text (cloud)</string>
    <string name="find_objects_button">Predict (TF)</string>
    <string name="find_objects_button_list">Get NIK (TF)</string>
    <string name="generate_bounding">Generate Bounding</string>
</resources>
